FreeST/test/Programs/ValidTests/Modules/Cycle/Cycle.fst
module Cycle where

import CycleB.CycleB

g : Int
g = 21

main : Int
main = f
